# Backend/Workload Management/src/main/java/workloadmanagement/auth/RegistrationRequest.java
@@ -11,18 +11,13 @@ import lombok.Setter;
 @Setter
 @Builder
 public class RegistrationRequest {
-    @NotEmpty(message = "Name name is required")
-    @NotBlank(message = "Name name is required")
-    private String name;
-    @NotEmpty(message = "Surname is required")
-    @NotBlank(message = "Surname is required")
-    private String surname;
+
     @NotEmpty(message = "Email is required")
     @NotBlank(message = "Email is required")
     @Email(message = "Email is invalid")
     private String email;
-    @NotEmpty(message = "Password is required")
-    @NotBlank(message = "Password is required")
-    @Size(min = 8, message = "Password must be at least 8 characters long")
-    private String password;
+//    @NotEmpty(message = "Password is required")
+//    @NotBlank(message = "Password is required")
+//    @Size(min = 8, message = "Password must be at least 8 characters long")
+//    private String password;
 }
