# Frontend/workload-management/src/openapi/openapi.json
@@ -249,7 +249,7 @@
         "tags": [
           "Faculty"
         ],
-        "operationId": "getFaculties",
+        "operationId": "findAllFaculties",
         "responses": {
           "200": {
             "description": "OK",
@@ -589,7 +589,7 @@
         "tags": [
           "Faculty"
         ],
-        "operationId": "getFaculty",
+        "operationId": "findFacultyById",
         "parameters": [
           {
             "name": "facultyId",
@@ -655,6 +655,29 @@
         "parameters": [
           {
             "name": "token",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/auth/activate-account/change-password": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "operationId": "changePassword",
+        "parameters": [
+          {
+            "name": "password",
             "in": "query",
             "required": true,
             "schema": {
@@ -779,15 +802,7 @@
           "facultyName": {
             "type": "string"
           },
-          "faculty_full_name": {
-            "type": "string"
-          }
-        }
-      },
-      "GrantedAuthority": {
-        "type": "object",
-        "properties": {
-          "authority": {
+          "facultyFullName": {
             "type": "string"
           }
         }
@@ -814,62 +829,6 @@
           }
         }
       },
-      "MyUser": {
-        "required": [
-          "email"
-        ],
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "email": {
-            "type": "string"
-          },
-          "teachingStaff": {
-            "$ref": "#/components/schemas/TeachingStaff"
-          },
-          "password": {
-            "type": "string"
-          },
-          "accountLocked": {
-            "type": "boolean"
-          },
-          "enabled": {
-            "type": "boolean"
-          },
-          "createdDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastModifiedDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "authorities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GrantedAuthority"
-            }
-          },
-          "name": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
-          },
-          "accountNonExpired": {
-            "type": "boolean"
-          },
-          "credentialsNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonLocked": {
-            "type": "boolean"
-          }
-        }
-      },
       "StatusType": {
         "type": "object",
         "properties": {
@@ -888,9 +847,6 @@
           "teachingStaffId": {
             "type": "integer",
             "format": "int32"
-          },
-          "user": {
-            "$ref": "#/components/schemas/MyUser"
           },
           "name": {
             "type": "string"
@@ -1007,12 +963,77 @@
           }
         }
       },
+      "GrantedAuthority": {
+        "type": "object",
+        "properties": {
+          "authority": {
+            "type": "string"
+          }
+        }
+      },
+      "MyUser": {
+        "required": [
+          "email"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "email": {
+            "type": "string"
+          },
+          "teachingStaff": {
+            "$ref": "#/components/schemas/TeachingStaff"
+          },
+          "password": {
+            "type": "string"
+          },
+          "accountLocked": {
+            "type": "boolean"
+          },
+          "enabled": {
+            "type": "boolean"
+          },
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "authorities": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GrantedAuthority"
+            }
+          },
+          "name": {
+            "type": "string"
+          },
+          "username": {
+            "type": "string"
+          },
+          "credentialsNonExpired": {
+            "type": "boolean"
+          },
+          "accountNonExpired": {
+            "type": "boolean"
+          },
+          "accountNonLocked": {
+            "type": "boolean"
+          }
+        }
+      },
       "TeachingStaffRequest": {
         "required": [
+          "name",
           "positionTitle",
           "staffAcademicRank",
           "staffFaculty",
-          "staffPhoto",
+          "surname",
           "user"
         ],
         "type": "object",
@@ -1029,7 +1050,10 @@
           "staffAcademicRank": {
             "$ref": "#/components/schemas/AcademicRank"
           },
-          "staffPhoto": {
+          "name": {
+            "type": "string"
+          },
+          "surname": {
             "type": "string"
           }
         }
@@ -1077,15 +1101,15 @@
       },
       "FacultyRequest": {
         "required": [
-          "facultyName",
-          "faculty_full_name"
+          "facultyFullName",
+          "facultyName"
         ],
         "type": "object",
         "properties": {
           "facultyName": {
             "type": "string"
           },
-          "faculty_full_name": {
+          "facultyFullName": {
             "type": "string"
           }
         }
@@ -1130,25 +1154,11 @@
       },
       "RegistrationRequest": {
         "required": [
-          "email",
-          "name",
-          "password",
-          "surname"
+          "email"
         ],
         "type": "object",
         "properties": {
-          "name": {
-            "type": "string"
-          },
-          "surname": {
-            "type": "string"
-          },
           "email": {
-            "type": "string"
-          },
-          "password": {
-            "maxLength": 2147483647,
-            "minLength": 8,
             "type": "string"
           }
         }
@@ -1345,6 +1355,12 @@
           "user": {
             "$ref": "#/components/schemas/MyUser"
           },
+          "name": {
+            "type": "string"
+          },
+          "surname": {
+            "type": "string"
+          },
           "staffFaculty": {
             "$ref": "#/components/schemas/Faculty"
           },
@@ -1414,7 +1430,7 @@
           "facultyName": {
             "type": "string"
           },
-          "faculty_full_name": {
+          "facultyFullName": {
             "type": "string"
           }
         }
